--- a/my-app/src/react/pages/main/index.css
+++ b/my-app/src/react/pages/main/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #1c1a1a;
+    background-color:rgba(20,24,29,120.803549) !important;
     color:#fff;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
