--- a/my-app/src/react/assets/components/index.css
+++ b/my-app/src/react/assets/components/index.css
@@ -1,11 +1,111 @@
-.imagenSilde {
+.imgZoom {
+    height: 700px;
 
-    width: 100%;
-    height: 500px;
 }
 
 
 .sliders{
-    height: 500px;
     width: 100%;
+    margin: 0 auto;
 }
+
+
+.carrouselDivision{
+          
+    width: 45%;
+    height: 700px;
+}
+
+.carrouselBox{
+    width: 55%;
+    height: 100%;
+}
+.carrouselContainer{
+    height: 700px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  box-shadow: 1px 8px 12px 2px rgba(0,0,0,0.45);
+  position: relative;
+  margin: 0 auto;
+  margin-bottom:160px;
+  ;
+
+}
+.carrouselCont{
+    height: 700px;
+    width: 500px;
+}
+.containerSlider{
+    background-size: 100% !important;
+    background-repeat:no-repeat
+}
+
+
+	
+	
+	
+	.newinfo-card {
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		font-size: .8em;
+		color: #2a9fff;
+		line-height: 1;
+		margin: 0;
+		font-weight: 700;
+		opacity:.5;
+	}
+	.newdesc-card {
+		font-weight: 300;
+		opacity: .84;
+        margin-top: 2em;
+        font-size: 24px;
+	}
+
+
+.hsCardTitle{
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	line-height: 1;
+    font-weight: 400;
+    font-size: 32px;
+    color: #ffffff;
+		margin-top: 1.25em;
+}
+
+.overlay {
+    width:100%;
+    height: 100%;
+    border-radius: 8px;
+    background: linear-gradient(to right, rgba(42,159,255,.2) 0%,rgba(33,33,32,1) 60%,rgba(33,33,32,1) 100%);
+    background-blend-mode: multiply;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    }
+
+
+    .newheader-card {
+		margin-bottom: 2em;
+    }
+    
+    .share {
+		padding: 1em;
+		display: inline-block;
+		width: 100%;
+		max-width: 130px;
+		
+    }
+    
+    .newContent-card {
+		width: 100%;
+		display: flex;
+		align-items: flex-start;
+		flex-direction: column;
+		position:relative;
+    }
+		
