--- a/my-app/src/react/pages/movie/index.css
+++ b/my-app/src/react/pages/movie/index.css
@@ -1,61 +1,48 @@
-
-#columns {
-    column-width: 320px;
-    column-gap: 15px;
-    width: 90%;
-    max-width: 1100px;
-    margin: 50px auto;
-}
-
-div#columns figure {
-    background: #fefefe;
-    border: 2px solid #fcfcfc;
-    box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-    margin: 0 2px 15px;
-    padding: 15px;
-    padding-bottom: 10px;
-    transition: opacity .4s ease-in-out;
-    display: inline-block;
-    column-break-inside: avoid;
-}
-
-div#columns figure img {
+.container-Movies{
+    height: 100%;
     width: 100%;
-    height: 400px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 15px;
-    margin-bottom: 5px;
 }
 
-div#columns figure figcaption {
-    font-size: .9rem;
-    color: #444;
-    line-height: 1.5;
+.columns{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+    align-items: center;
+}
+.Movies-Card{
+    z-index: 1 !important;
+    width: 320px;
+    height: 660px;
+    border-radius:4px;
+    box-shadow: 5px 5px 115px -14px black;
+    margin-left: 12px ;
+    margin-top: 18px;
+    border: 2px transparent solid;
+
+}
+.Movies-Card:hover{
+    border: 2px #fff solid;
+}
+.MoviesImg-Card{
+    width: 100%;
+    height: 460px;
 }
 
-div#columns small {
-    font-size: 1rem;
-    float: right;
-    text-transform: uppercase;
-    color: #aaa;
+.MoviesImg{
+    height: 100%;
+    width: 100%;
 }
 
-div#columns small a {
-    color: #666;
-    text-decoration: none;
-    transition: .4s color;
+.Movies-text-cont{
+    padding: 0px 12px;
+    text-align: justify;
 }
 
-div#columns:hover figure:not(:hover) {
-    opacity: 0.4;
+.Movies-text-Tittle{
+    font-size: 32px;
 }
 
-@media screen and (max-width: 750px) {
-    #columns {
-        column-gap: 0px;
-    }
-
-    #columns figure {
-        width: 100%;
-    }
+.Movies-text-Description{
+    font-size: 18px;
+    letter-spacing: .075em;
+    font-weight: 400;
 }
