--- a/my-app/src/react/pages/navbar/index.css
+++ b/my-app/src/react/pages/navbar/index.css
@@ -2,14 +2,54 @@
     background-color: #802C;
 }
 
-.linkContainer{
-    display:flex;
-    justify-content: space-between;
-    margin-right: 60px;
-    width: 200px;
 
+
+.gradienteHeader{
+    display: flex;
+    align-items: center;
+   background-image:linear-gradient(180deg,#14181c 0,rgba(20,24,28,.94460641) 16.56%,rgba(20,24,28,.80174927) 30.85%,rgba(20,24,28,.60641399) 43.77%,rgba(20,24,28,.39358601) 56.23%,rgba(20,24,28,.19825073) 69.15%,rgba(20,24,28,.05539359) 83.44%,rgba(20,24,28,0));
 }
-.linkContainer>a{
-    text-decoration:none;
-    color:white
+.navbarSection{
+    width: 50%;
+height: 72px;
+margin: 0 auto;
+position: relative;
+display: flex;
+justify-content: space-around;
+align-items: center;
+}
+.navbarSection>a{
+    text-decoration: none;
+    color:#fff;
+    font-family:  'Roboto', sans-serif;
+    letter-spacing: 0.48em;
+    text-transform: uppercase;
+
+    
+}
+.headerSection{
+    height: 72px;
+    position: relative;
+    z-index: 1;
+border-bottom: 2px solid #fff;
+width: 100%;
+}
+
+.headerLogo{
+    display: flex;
+    align-items: center;
+
+justify-content: center;
+    width: 25%;
+}
+.headerLogo>img{
+    height: 72px;
+   }
+
+.headerFormulario{
+     
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
 }
